GNOME Bugzilla – Bug 733380
videobox: adds borders of the wrong color
Last modified: 2014-07-19 09:39:49 UTC
videobox does not always add borders of the correct color, when working in some image formats. For example, despite explicitly asking for a black top border, this command will generate a blue one: gst-launch-1.0 videotestsrc ! video/x-raw,format=BGRx ! videobox top=-50 fill=black ! videoconvert ! xvimagesink
commit b1f7681555f07e65a96794c1eecc2f393942d154 Author: Sebastian Dröge <sebastian@centricular.com> Date: Sat Jul 19 11:30:30 2014 +0200 videobox: Don't overwrite the first component with the alpha value for BGRx Instead leave the x component unset when filling the borders. https://bugzilla.gnome.org/show_bug.cgi?id=733380