videobox: Don't overwrite the first component with the alpha value for BGRx

Instead leave the x component unset when filling the borders.

https://bugzilla.gnome.org/show_bug.cgi?id=733380